# PastaBeanEmailService

./: .gitignore  README.md  pyproject.toml
src/: app.py  config.py  exceptions.py  service.py
src/events/: base_event.py  register_event.py
src/templates/: register_email.html
src/utils/: event_extraction.py  event_registry.py  message_creating.py  sending.py  template_registry.py  template_rendering.py
